add changes in to list of fram class in componantTesting